# open-pdf-sign-configurator

./: .gitignore  CONTRIBUTING.md  README.md  instructions.md
installer/: README.md  both.com  installer.py  menu.py  multiple.com  nginxInstaller.py  nginxparser.py  openpdfsign.service  pyproject.toml  requirements.txt  setup.py  test.com  util.py  utils.py
installer/opsconfig/: installer.py  nginxConfigManipulator.py  nginxInstaller.py  nginxparser.py  utils.py
installer/opsinstaller/: installer.py  nginxConfigManipulator.py  nginxInstaller.py  openpdfsign.service  utils.py
installer/tests/: config.yml
installer/tests/nginxconfig/: cssblur  test.com
test/configurator/: Dockerfile  default
test/installer/: Dockerfile  README.md  default  entrypoint.sh  rebuild.sh
test/nginx/: Dockerfile  default  entrypoint.sh
test/pdfservertest/: Dockerfile  default  entrypoint.sh
